it compiles, and boots, now to make it work again

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 src_dir = main
 
-[env:esp32dev]
+[env:esp-wrover-kit]
 platform = espressif32
 framework = espidf
-board = esp32dev
+board = esp-wrover-kit
